fix: improve list card icon alignment

--- a/src/components/card/card-icon.module.css
+++ b/src/components/card/card-icon.module.css
@@ -1,7 +1,3 @@
-.icon_large {
-  margin-top: -0.375rem;
-}
-
 .icon_mythos,
 .icon_weakness,
 .icon_large {
@@ -13,10 +9,6 @@
   position: relative;
   width: 1em;
   height: 1em;
-}
-
-.icon_skill .icon-child {
-  margin-top: -1px;
 }
 
 .icon-level {
